Changes for 1.3.3.0
* Finished work on allowing triggers to clear data from properties that add rather than overwrite data, by adding "-clear-" to the beginning of the new property, in the triggered change. (veqryn)

* Fixed issue where stats panel and exported stats relied on the first game steps it saw to determine turn order, which meant it considered the order of bids as representative of turn order, instead of looking at things like movement. (veqryn) 

* Preliminary work on allowing triggers to clear data from properties that allow multiple sets, in other words, properties that add data rather than overwriting. (veqryn)

* Created new triggers for changing territory properties, using territoryName and territoryProperty. (veqryn)

* Fixed unitProperty trigger change to accept properties with more than one colon. (veqryn)

* Created ability to make conditions and rules attachments that include other conditions in them, and the ability to set the relationship of these conditions to AND, OR, XOR. (veqryn)

* Fixed bug where getCosts in BattleCalculator was only returning the costs for the units that a nation could produce, instead of all units that nation could own. Changed to BattleCalculator.getCostsForTUV (veqryn)

* Fixed bug where TUV in stats panel showed units that had multiple given per production, like NWO's artillery was buy 2 for 7 PUs, incorrectly show on the TUV panel as 7 PUs each. Now it shows up as the rounded up value. (veqryn)

* Updating client game and server model to carry information on alliances and player order. (veqryn)

* Allowed the exporting of stats based on the individual phases in a players turn. (veqryn)

* Updating local player selection screen to show players in turn order, assuming xml was done properly, and to show their alliances. (veqryn)

* Updating 'Export Game Stats...' to give more general information about the game. (veqryn)
