@@ -3025,6 +3025,9 @@
 															regardless of the player specified in the trigger. In order to have a unitType+unitProperty change only affect certain players and not others, you need to make a new unit type for those players (ie: rename the unit for those players only)
 			territoryName						values: the exact name of the territory to be affected by a territoryProperty change (example: value="Germany")
 			territoryProperty					values: the name of any actual territory property, with a count equal to the property's values (examples: value="production" count="4", or value="victoryCity" count="true"), requires a territoryName declared
+			playerProperty						values: the name of any actual player attachment property, with a count equal to the property's values (examples: value="destroysPUs" count="true"). (requires players to be set, otherwise it uses the attached player)
+			attachmentToBeChangedName			values: the type of attachment (TriggerAttachment or RulesAttachment) and the exact full name of the attachment to be changed. (example: value="RulesAttachment" count="rulesAttatchment")
+			
 			
 	-->
 		<!-- Clarification on changing properties and clearing of properties:
@@ -3043,6 +3046,17 @@
 					changeUnitOwners
 					captureUnitOnEnteringBy
 					territoryEffect
+					
+				Player Attachments:
+					giveUnitControl
+					captureUnitOnEnteringBy
+					
+				Objectives & Condition Attachments:
+					conditions
+					unitPresence
+				
+				Rules Attachments:
+					productionPerXTerritories
 				
 		-->
 	<!-- Victory Triggers -->
