@@ -185,6 +185,7 @@ public class MoveDelegate extends BaseDelegate implements IMoveDelegate
         if(!m_nonCombat && games.strategy.triplea.Properties.getTriggers(m_data))
         {
         	TriggerAttachment.triggerTerritoryPropertyChange(player, aBridge, gameData);
+        	TriggerAttachment.triggerPlayerPropertyChange(player, aBridge, gameData);
         }
 
         // repair 2-hit units at beginning of turn (some maps have combat move before purchase, so i think it is better to do this at beginning of combat move)
